# sinar-backend

./: .gitignore  README.md  anotator.ipynb  api_server.py  centrogen.ipynb  classical.ipynb  data-reorganizer.ipynb  exporter.ipynb  helper.sh  lab.ipynb  logger.py  main.py  nginx-rtmp.conf  notification_service.py  openvino.ipynb  pick.ipynb  pkmkc-sinar-firebase-adminsdk-x67kd-542ca3abd4.json  pose.ipynb  predigenk.py  pyproject.toml  requirements.txt  server.py  sinar.py  sinar.service  stream.py  tes.py  torch.ipynb  utils.py  visual-cnn.ipynb
api/: api_server.py  cctv.py  server.py
model/: cctv.py
sinar/: __init__.py  _sinar.py  core.py  logger.py  main.py  models.py  motas.py  predigenk.py  sinar.py  stream.py  trainer.py  utils.py
sinar/data/: annotator.py  centrogen.py  centroset.py  dynamic.py  viewer.py
sinar/service/: __init__.py  base_response.py  server.py
